--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "mdb-react-ui-kit": "^2.3.0",
     "next": "12.0.10",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "redis-om": "^0.1.7"
   },
   "devDependencies": {
     "eslint": "8.8.0",
